# Yime

./: -remote inscode  .coverage  .gitattributes  .gitignore  .gitmodules  .inscode  .markdownlint.json  AGENTS.md  API.md  AUTHORS.txt  Build.cmd  Build.ps1  CHANGELOG.md  CMakeLists.txt  CODEPOINT_POLICY.md  COMMERCIAL_LICENSE.md  COMMERCIAL_LICENSE_TEMPLATE.md  COMMERCIAL_LICENSE_TEMPLATE_CLIENT_DELIVERY.md  COMMERCIAL_LICENSE_TEMPLATE_CLOSED_SOURCE.md  COMMERCIAL_LICENSE_TEMPLATE_SAAS.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATAFILES.md  DEVELOPMENT.md  DIRECT_INSTALL_GUIDE.md  INPUT_METHOD_SOLUTION.md  INSTALLATION_GUIDE.md  Install-PIME-Test.cmd  LEGAL_REVIEW_CHECKLIST.md  LICENSE  LICENSE.txt  LICENSE.zh-CN.md  LICENSING_INDEX.md  LICENSING_STRATEGY_INTL_PRIORITY.md  LOCAL_PHRASE_PRIORITY_RULES.md  MANIFEST.in  MSKLC_RELEASE_QUICKSTART.md  NOTEPAD_FONT_SETUP.md  NOTICE.md  Open-Dev-Guide.cmd  (+159 more)
.arts/: extensions.json  launch.json  settings.json
.github/: CODEOWNERS  branch-protection.yml
LICENSES/: PIME-UPSTREAM-LICENSE.txt  RUST-DEPENDENCIES.md  UNICODE-3.0.txt
PIMELauncher/: Cargo.toml  README.md  README_SPEC.md  build.rs
PIMETextService/: CMakeLists.txt  DllEntry.cpp  PIMEClient.cpp  PIMEClient.h  PIMECompositionSegmentRpc.h  PIMEImeModule.cpp  PIMEImeModule.h  PIMEKeyRouting.h  PIMELangBarButton.cpp  PIMELangBarButton.h  PIMEProcessValidation.h  PIMERpcResponse.h  PIMETextService.cpp  PIMETextService.h  PIMETextService.rc.in  PIMEUiPolicy.h
PIMETextService/tests/: PIMERpcResponseTests.cpp
YIME_Theory/: 音元系统摘要.md  音元系统目录.md
config/: sort_rules.json
coverage/: clover.xml  coverage-final.json  lcov.info
data_json_files/: key_symbol_mapping.json
docs/: API.md  CODEPOINT_POLICY.md  CROSS_WINDOW_REGRESSION_CHECKLIST.md  DATAFILES.md  DEVELOPMENT.md  EFFICIENCY_BASELINE.md  FAQ.md  IDE_INPUT_SOLUTION.md  INSTALL.md  KEYBOARD_LAYOUT_PIPELINE.md  LIBRIME_1_17_MIGRATION_EVALUATION.md  LOCAL_PHRASE_PRIORITY_RULES.md  MSKLC_PRECOMPILE_CHECKLIST.md  PINYIN_HANZI_DB_DOMAINS.md  README.md  REBUILD_KEYBOARD.md  REVERSE_LOOKUP_AND_USER_LEXICON.md  REVERSE_LOOKUP_AND_USER_LEXICON_QUICK_REF.md  SHOUYIN_SPLITTER_RULES.md  SOURCE_AND_ARTIFACTS.md  STATUS_FEEDBACK.md  TERMINAL_FONT_SETUP.md  TERMINOLOGY_INDEX.md  THEORY.md  THEORY_INDEX.md  USAGE.md  USER_HELP.md  YIME_ARCHITECTURE.md  YIME_DATA_FORMAT_REFERENCE.md  YIME_DEVELOPMENT_ROADMAP.md  YIME_INSTALL_VERIFICATION_2026-07-12.md  YIME_INSTALL_VERIFICATION_2026-07-22.md  YIME_NATIVE_UI_GUIDELINES.md  YIME_PROJECT_ASSESSMENT.md  YIME_RELEASE_AND_SIGNING.md  YIME_RELEASE_REHEARSAL_2026-07-15.md  YIME_RIME_INTEGRATION.md  YIME_TESTING_GUIDE.md  YIME_TOOLING_STRATEGY.md  YIME_TOOL_DEVELOPMENT_GUIDE.md  (+29 more)
external_data/: finals_IPA_mapping.json  initials_IPA_mapping.json  word_freq_README.md
finals_classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
go-backend/: README.md  build.bat  build_script_test.go  deploy-server.ps1  go.mod  log_rotation.go  log_rotation_test.go  run_admin_yime_tests.cmd  server.go  server_integration_test.go  server_test.go
install/: friend-trial-message-template.md
installer/: installer.nsi
internal_data/: bmp_pua_trial_projection.md  classified_finals.json  continuous_input_priority_rules.json  final_components.json  ganyin_analyzer.json  ipa_of_finals.json  key_symbol_mapping.json  klc_layout_visual_table.md  local_phrase_priority_rules.json  local_phrase_priority_samples.json  manual_key_layout.json  manual_key_layout.resolved.json  msklc_compile_install_report.md  musical_group_template.json  musical_layout_skeleton.md  pianyin_counter.json  pianyin_sequence_of_ganyin.json  shouyin_constraint_priority.md  shouyin_direct_following_constraints.json  shouyin_ganyin_combinability.json  shouyin_group_template.json  shouyin_layout_check.md  shouyin_layout_skeleton.md  slot_symbol_crosswalk.json  slot_symbol_crosswalk.md  workflow_log.json  yinjie_runtime_key_symbol_mapping.json  yinyuan_analyzer.json  yinyuan_pianyin_mapping.json  yueyin_attributes.json  yueyin_dict.json  yueyin_runtime_layout_audit.md  zaoyin_runtime_layout_audit.md
legacy/: README.md
pending_deletion_legacy_migrations/: 000_create_mapping_queue.sql  README.md  backfill_mappings.py  check_recent_inserts.py  create_db_and_user.py  create_placeholder_mappings.py  create_user_noninteractive.py  find_conflict_for_999005.py  fix_missing_999005_final.py  import_from_json.py  import_normalized_json.py  inspect_queue.py  run_backfill_queue.py  run_import_with_logging.py
pianyin/: Median Pitch Level of Mandarin Tonal System.md  __init__.py  calculate_pentatonic_value.py  calculate_speech_pentatonic_value_1.py  initial.py  initial_ipa.json  initial_pianyin.json  pianyin.py  pianyin_initial.json  unpitched_pianyin.py  unpitched_pitched_dichotomy.md  五度制调值与五声音阶的关联.md
pinyin/: __init__.py  analyze_pinyin_diff.py  constants.py  conversion_stats.json  convert_json_to_json.py  generate_yinjie.py  hanzi_to_pinyin.json  initial.json  jiezhi.json  keys_to_yunmu.py  merge_pinyin.py  neutral_tone_syllable.json  pinyin_to_hanzi.py  pinyin_to_hanzi_1.py  pinyin_to_hanzi_enhanced.py  shengmu.csv  shengmu_enhanced.json  temp.md  temp.py  test_yunmu_to_keys.py  toned_pinyin.json  written_forms_of_a_and_g.md  yaml_to_json.py  yunmu.json  yunmu_enhanced.json  yunmu_to_keys copy 2.py  yunmu_to_keys.py
project/: INPUT_METHOD_SOLUTION.md  PINYIN_DATA_MIGRATION.md  ROADMAP.md  YINYUAN_REFACTOR_FLOW.md
scripts/: build_friend_trial_package.bat  build_portable_release.bat  build_setup_release.bat  dev_unlock.cmd  dynamic_finals_script.py  ganyin_final_definition_script.py  generate_api_docs.py  import_blcu_word_frequency.cmd  print_project_version.py  push_all.py  push_all.sh  run_tests.cmd  run_tests.sh
src/: App.tsx
styles/: styles.css  tone_font.css
syllable/: LEGACY_ANALYSIS.md  NAMING.md  README.md  __init__.py  ganyin.json  ganzhi.json  ganzhi_yunmu.json  jiediao.json  jiezhi.json  shouyin.json  shouyin_shengmu.json  syllabic_quality.json  syllable_analyzer_strategy.py  syllable_factory.py  syllable_mapper.py  z_copy.py  z_pandas.py
(+1173 files in other folders)
